--- a/cSpan/cSpan.csproj
+++ b/cSpan/cSpan.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0B67BB84-A895-4301-B58E-17F887673D3D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>cSpan</RootNamespace>
+    <AssemblyName>cSpan</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
